--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start-dev": "NODE_ENV='development' react-scripts start",
     "start": "react-scripts start"
   },
-
   "keywords": [],
   "author": "Edward Duong, Scott Thompson, Benjamin Swartzwelder",
   "license": "ISC",
@@ -17,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "useparams": "^0.0.2"
   },
   "browserslist": {
     "production": [
